Updated Spanish translation.
2005-09-01  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* es.po: Updated Spanish translation.

--- a/po/es.po
+++ b/po/es.po
@@ -15,7 +15,7 @@ msgstr ""
 "Project-Id-Version: gnome-control-center\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-16 03:33+0200\n"
-"PO-Revision-Date: 2005-08-24 00:13+0200\n"
+"PO-Revision-Date: 2005-09-01 01:20+0200\n"
 "Last-Translator: Francisco Javier F. Serrador <serrador@cvs.gnome.org>\n"
 "Language-Team: Spanish <traductores@es.gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -460,7 +460,7 @@ msgid ""
 msgstr ""
 "El criterio al buscar archivos en la barra de búsqueda. Si está definido "
 "como «search_by_text» entonces Nautilus buscará los archivos por el nombre "
-"de archivo solamente. Si está definido como «search_by_text_and_properties» "
+"de archivo solamente. Si se establece a «search_by_text_and_properties» "
 "entonces Nautilus buscará los archivos por su nombre y propiedades."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:6
@@ -572,16 +572,16 @@ msgid ""
 "Filename for the default folder background. Only used if background_set is "
 "true."
 msgstr ""
-"Nombre de archivo para el fondo de carpeta predeterminado. Sólo es utilizado "
-"si «background_set» es «true»."
+"El nombre del archivo para el fondo de carpeta predeterminado. Sólo es utilizado "
+"si «background_set» es 'true'."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:31
 msgid ""
 "Filename for the default side pane background. Only used if "
 "side_pane_background_set is true."
 msgstr ""
-"Nombre de archivo para el fondo predeterminado del panel lateral. Sólo es "
-"utilizado si «side_pane_background_set» es «true»."
+"El nombre del archivo para el fondo predeterminado del panel lateral. Sólo es "
+"utilizado si «side_pane_background_set» es 'true'."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:32
 msgid ""
@@ -605,30 +605,30 @@ msgid ""
 "If set to true, Nautilus will only show folders in the tree side pane. "
 "Otherwise it will show both folders and files."
 msgstr ""
-"Si está definido como «true» Nautilus mostrará sólo las carpetas en el árbol "
+"Si se establece a 'true', Nautilus mostrará sólo las carpetas en el árbol "
 "del panel lateral. De otro modo mostrará tanto las carpetas como los "
 "archivos."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:35
 msgid "If set to true, newly opened windows will have the location bar visible."
-msgstr "Si está definido como «true», las ventanas nuevas abiertas tendrán la barra de lugar visible."
+msgstr "Si se establece a 'true', las ventanas nuevas abiertas tendrán la barra de lugar visible."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:36
 msgid "If set to true, newly opened windows will have the side pane visible."
 msgstr ""
-"Si esta definido como «true» la ventas nuevas abiertas tendrán el panel "
+"Si se establece a 'true', la ventas nuevas abiertas tendrán el panel "
 "lateral visible."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:37
 msgid "If set to true, newly opened windows will have the status bar visible."
 msgstr ""
-"Si está definido como «true» las ventas nuevas abiertas tendrán la barra de "
+"Si se establece a 'true', las ventas nuevas abiertas tendrán la barra de "
 "estado visible."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:38
 msgid "If set to true, newly opened windows will have toolbars visible."
 msgstr ""
-"Si está definido como «true» las ventanas nuevas abiertas tendrán la barra "
+"Si se establece a 'true', las ventanas nuevas abiertas tendrán la barra "
 "de herramientas visible."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:39
@@ -636,7 +636,7 @@ msgid ""
 "If set to true, then Nautilus browser windows will always use a textual "
 "input entry for the location toolbar, instead of the pathbar."
 msgstr ""
-"Si se establece a 'true', entonces las ventanas del explorador de Nautilus "
+"Si se establece a 'true', entonces las ventanas del explorador Nautilus "
 "usarán siempre una entrada textual para la barra de lugar, en vez de la "
 "barra de rutas."
 
@@ -645,8 +645,8 @@ msgid ""
 "If set to true, then Nautilus lets you edit some of the more esoteric "
 "options of a file in the file preferences dialog."
 msgstr ""
-"Si está definido como «true» entonces Nautilus le permitirá editar algunas "
-"de las opciones más raras de un archivo en el diálogo de preferencias de "
+"Si se establece a 'true', entonces Nautilus le permitirá editar algunas "
+"de las opciones más esotéricas de un archivo en el diálogo de preferencias de "
 "archivo."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:41
@@ -654,7 +654,7 @@ msgid ""
 "If set to true, then Nautilus shows folders prior to showing files in the "
 "icon and list views."
 msgstr ""
-"Si está definido como «true» entonces Nautilus mostrará las carpetas por "
+"Si se establece a 'true', entonces Nautilus mostrará las carpetas por "
 "delante de los archivos en las vistas de iconos y lista."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:42
@@ -662,13 +662,13 @@ msgid ""
 "If set to true, then Nautilus will ask for confirmation when you attempt to "
 "put files in the trash."
 msgstr ""
-"Si esta definido como «true» entonces Nautilus solicitará una confirmación "
+"Si se establece a 'true', entonces Nautilus solicitará una confirmación "
 "cuando intente colocar archivos en la papelera."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:43
 msgid "If set to true, then Nautilus will draw the icons on the desktop."
 msgstr ""
-"Si está definido como «true» entonces Nautilus dibujará los iconos en el "
+"Si se establece a 'true', entonces Nautilus dibujará los iconos en el "
 "escritorio."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:44
@@ -677,7 +677,7 @@ msgid ""
 "file immediately and in-place, instead of moving it to the trash. This "
 "feature can be dangerous, so use caution."
 msgstr ""
-"Si está definido como «true» entonces Nautilus tendrá una opción que le "
+"Si se establece a 'true', entonces Nautilus tendrá una opción que le "
 "permitirá borrar un archivo inmediatamente en lugar de moverlo a la "
 "papelera. Esta característica puede ser peligrosa, así que úsela con cuidado."
 
@@ -686,8 +686,8 @@ msgid ""
 "If set to true, then Nautilus will use the user's home folder as the "
 "desktop. If it is false, then it will use ~/Desktop as the desktop."
 msgstr ""
-"Si se establece a «true» entonces Nautilus usará la carpeta personal del "
-"usuario como escritorio. Si está definido como «false» entonces utilizará ~/"
+"Si se establece a 'true', entonces Nautilus usará la carpeta personal del "
+"usuario como escritorio. Si se establece a «false» entonces utilizará ~/"
 "Desktop como el escritorio."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:46
@@ -696,7 +696,7 @@ msgid ""
 "how Nautilus used to behave before version 2.6, and some people prefer this "
 "behavior."
 msgstr ""
-"Si se establece a «true», entonces todas las ventanas de Nautilus serán "
+"Si se establece a 'true', entonces todas las ventanas de Nautilus serán "
 "ventanas de navegación. Esto es cómo se comportaba Nautilus antes de la "
 "versión 2.6, y alguna gente prefiere este comportamiento."
 
@@ -706,7 +706,7 @@ msgid ""
 "displayed. Currently, only files ending in a tilde (~) are considered backup "
 "files."
 msgstr ""
-"Si se establece a «true» entonces se mostrarán los archivos de respaldo "
+"Si se establece a 'true', entonces se mostrarán los archivos de respaldo "
 "(como los que crea Emacs). Actualmente sólo los archivos que terminan con "
 "una virgulilla (~) se consideran archivos de respaldo."
 
@@ -715,7 +715,7 @@ msgid ""
 "If set to true, then hidden files are shown in the file manager. Hidden "
 "files are either dotfiles or are listed in the folder's .hidden file."
 msgstr ""
-"Si se establece a «true» los archivos ocultos se mostrarán en el "
+"Si se establece a 'true', los archivos ocultos se mostrarán en el "
 "administrador de archivos. Los archivos ocultos son archivos que comienzan "
 "con un punto o que están listados en el archivo «.hidden» de la carpeta."
 
@@ -723,14 +723,14 @@ msgstr ""
 msgid ""
 "If this is set to true, an icon linking to the computer location will be put "
 "on the desktop."
-msgstr "Si está definido como «true» se colocará un icono enlazado con el lugar del equipo en el escritorio."
+msgstr "Si se establece a 'true', se colocará un icono enlazado con el lugar del equipo en el escritorio."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:50
 msgid ""
 "If this is set to true, an icon linking to the home folder will be put on "
 "the desktop."
 msgstr ""
-"Si está definido como «true» se colocará un icono de enlace a la carpeta "
+"Si se establece a 'true', se colocará un icono de enlace a la carpeta "
 "personal en el escritorio."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:51
@@ -738,7 +738,7 @@ msgid ""
 "If this is set to true, an icon linking to the trash will be put on the "
 "desktop."
 msgstr ""
-"Si está definido como «true» se colocará un icono enlazado a la papelera en "
+"Si se establece a 'true', se colocará un icono enlazado a la papelera en "
 "el escritorio."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:52
@@ -746,7 +746,7 @@ msgid ""
 "If this is set to true, icons linking to mounted volumes will be put on the "
 "desktop."
 msgstr ""
-"Si está definido como «true» se colocarán iconos enlazando con los volúmenes "
+"Si se establece a 'true', se colocarán iconos enlazando con los volúmenes "
 "montados en el escritorio."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:53
@@ -755,7 +755,7 @@ msgid ""
 "by name, then instead of sorting the files from \"a\" to \"z\", they will be "
 "sorted from \"z\" to \"a\"."
 msgstr ""
-"Si está definido como «true» los archivos en las ventanas nuevas se "
+"Si es 'true', los archivos en las ventanas nuevas se "
 "colocarán en sentido inverso. Ej: si se colocan por nombre entonces en vez "
 "de colocarlos de la «a» a la «z» se colocarán de la «z» a la «a»."
 
@@ -766,7 +766,7 @@ msgid ""
 "sorted from \"z\" to \"a\"; if sorted by size, instead of being "
 "incrementally they will be sorted decrementally."
 msgstr ""
-"Si está definido como «true» los archivos en las ventanas nuevas se "
+"Si se establece a 'true', los archivos en las ventanas nuevas se "
 "colocarán en sentido inverso. Ej: si se ordenados por nombre entonces en vez "
 "de colocarse de la «a» a la «z» se colocarán de la «z» a la «a» ; si se "
 "colocan por tamaño; en lugar de ordenarse incrementalmente se ordenarán "
@@ -775,19 +775,19 @@ msgstr ""
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:55
 msgid "If true, icons will be laid out tighter by default in new windows."
 msgstr ""
-"Si está definido como «true» los iconos serán distribuidos por omisión más "
-"juntos en las ventanas nuevas."
+"Si es 'true', los iconos se distribuirán más "
+"juntos por omisión en las ventanas nuevas."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:56
 msgid "If true, labels will be placed beside icons rather than underneath them."
 msgstr ""
-"Si es «true» las etiquetas se colocarán a los lados de los iconos en lugar "
+"Si es 'true', las etiquetas se colocarán a los lados de los iconos en lugar "
 "de por debajo de éstos."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:57
 msgid "If true, new windows will use manual layout by default."
 msgstr ""
-"Si está definido como «true» las ventanas nuevas usarán una organización "
+"Si es 'true', las ventanas nuevas usarán una organización "
 "manual de forma predeterminada."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:58
@@ -896,9 +896,9 @@ msgstr ""
 "Compensación de velocidad para cuando se hace una reproducción previa de un "
 "archivo de sonido al colocar el ratón sobre los iconos de los archivos. Si "
 "está definido como «always» entonces se reproducirá el sonido, aún si el "
-"archivo se encuentra en un servidor remoto. Si está definido como "
+"archivo se encuentra en un servidor remoto. Si se establece a "
 "«local_only» entonces la reproducción previa sólo se realizará sobre "
-"archivos locales. Si está definido como «never» entonces nunca de reproducirá "
+"archivos locales. Si se establece a «never» entonces nunca de reproducirá "
 "previamente el sonido."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:81
@@ -910,11 +910,11 @@ msgid ""
 "read preview data."
 msgstr ""
 "Compensación de velocidad para cuando se muestran previamente los contenidos "
-"de un archivo de texto en el icono del archivo. Si está definido como "
+"de un archivo de texto en el icono del archivo. Si se establece a "
 "«always» entonces siempre se mostrará una vista previa, aún si la "
-"carpeta se encuentra en un servidor remoto. Si está definido como "
+"carpeta se encuentra en un servidor remoto. Si se establece a "
 "«local_only» entonces sólo se previsualizará en los sistemas de archivos "
-"locales. Si está definido como «never» entonces nunca se leerán datos para "
+"locales. Si se establece a «never» entonces nunca se leerán datos para "
 "la vista previa."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:82
@@ -926,10 +926,10 @@ msgid ""
 "generic icon."
 msgstr ""
 "Compensación de velocidad para cuando se muestran archivos de imágenes como "
-"una miniatura. Si está definido como «always» entonces siempre se "
+"una miniatura. Si se establece a «always» entonces siempre se "
 "miniaturizará, aún si la carpeta se encuentra en un servidor remoto. Si está "
 "definido como «local_only» entonces sólo se miniaturizará en los sistemas de "
-"archivos locales. Si está definido como «never» entonces no se "
+"archivos locales. Si se establece a «never» entonces no se "
 "miniaturizarán la imágenes, sólo se mostrará un icono genérico."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:83
@@ -940,10 +940,10 @@ msgid ""
 "systems. If set to \"never\" then never bother to compute item counts."
 msgstr ""
 "Compensación de velocidad para cuando se muestra la cantidad de elementos en "
-"una carpeta. Si está definido como «always» entonces siempre se contarán, "
-"aún si la carpeta se encuentra en un servidor remoto. Si está definido como "
+"una carpeta. Si se establece a «always» entonces siempre se contarán, "
+"aún si la carpeta se encuentra en un servidor remoto. Si se establece a "
 "«local_only» entonces sólo se contarán en los sistemas de archivos locales. "
-"Si está definido como «never» entonces nunca se contarán la cantidad de "
+"Si se establece a «never» entonces nunca se contarán la cantidad de "
 "elementos."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:84
