--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-09-01  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
+
+	* es.po: UPdated Spanish translation.
+
 2005-08-31  Alessio Frusciante  <algol@firenze.linux.it>
 
 	* it.po: Updated Italian translation by
