--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-09-01  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
+
+	* gl.po: Updated Galician Translation.
+
 2005-09-01  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
 
 	* es.po: UPdated Spanish translation.
