Updated Korean translation by Young-Ho Cha.
2005-09-02  Choe Hwanjin <choe.hwanjin@gmail.com>

        * ko.po: Updated Korean translation by Young-Ho Cha.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-09-02  Choe Hwanjin <choe.hwanjin@gmail.com>
+
+	* ko.po: Updated Korean translation by Young-Ho Cha.
+	
 2005-09-01  Baris Cicek <baris@teamforce.name.tr>
 
 	* tr.po: Updated Turkish Translation
