--- a/po/ko.po
+++ b/po/ko.po
@@ -4,8 +4,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus 2.7.3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-08-30 01:08+0900\n"
-"PO-Revision-Date: 2005-08-30 01:09+0900\n"
+"POT-Creation-Date: 2005-08-30 21:00+0900\n"
+"PO-Revision-Date: 2005-08-30 21:00+0900\n"
 "Last-Translator: Young-Ho Cha <ganadist at gmail dot com>\n"
 "Language-Team: GNOME Korea <gnome-kr-hackers@lists.kldp.net>\n"
 "MIME-Version: 1.0\n"
@@ -4368,7 +4368,7 @@ msgstr "<b>위치(_L)</b>"
 
 #: ../src/nautilus-bookmarks-window.glade.h:3
 msgid "<b>_Name</b>"
-msgstr "<b>이름(_N)</b>"
+msgstr "<b>이름</b>"
 
 #: ../src/nautilus-bookmarks-window.glade.h:4
 msgid "Edit Bookmarks"
@@ -5621,7 +5621,7 @@ msgstr "Copyright © 1999-2005 The Nautilus authors"
 
 #: ../src/nautilus-window-menus.c:455
 msgid "translator-credits"
-msgstr "차영호 <ganadist at mizi.com>"
+msgstr "차영호 <ganadist at gmail dot com>"
 
 #: ../src/nautilus-window-menus.c:595
 msgid "_File"
@@ -5844,44 +5844,3 @@ msgstr "네트워크 서버"
 #: ../src/network-scheme.desktop.in.h:2
 msgid "View your network servers in the Nautilus file manager"
 msgstr "노틸러스 파일 관리자에서 네트워크 서버를 봅니다"
-
-#~ msgid ""
-#~ "Do you want to switch to manual layout and leave this item where you "
-#~ "dropped it? This will clobber the stored manual layout."
-#~ msgstr ""
-#~ "수동 배치로 바꾸고 옮긴 항목을 그대로 두고 싶습니까?  이것은 저장된 수동 "
-#~ "배치에 영향을 끼칠것입니다."
-
-#~ msgid "This folder uses automatic layout."
-#~ msgstr "이 폴더는 자동으로 배치됩니다."
-
-#~ msgid ""
-#~ "Do you want to switch to manual layout and leave these items where you "
-#~ "dropped them? This will clobber the stored manual layout."
-#~ msgstr ""
-#~ "수동 배치로 바꾸고 옮긴 항목을 그대로 두고 싶습니까? 이것은 저장된 수동 배"
-#~ "치에 영향을 끼칠것입니다."
-
-#~ msgid ""
-#~ "Do you want to switch to manual layout and leave this item where you "
-#~ "dropped it?"
-#~ msgstr "수동 배치로 바꾸고 옮긴 항목을 그대로 두고 싶습니까? "
-
-#~ msgid ""
-#~ "Do you want to switch to manual layout and leave these items where you "
-#~ "dropped them?"
-#~ msgstr "수동 배치로 바꾸고 옮긴 항목을 그대로 두고 싶습니까? "
-
-#~ msgid "_Browse Folders"
-#~ msgstr "폴더 찾아보기(_B)"
-
-#~ msgid "Ma_ke Links"
-#~ msgstr "바로 가기 만들기(_K)"
-
-#~ msgid "Names:"
-#~ msgstr "이름:"
-
-#~ msgid ""
-#~ "This is probably because the emblem is a permanent one, and not one you "
-#~ "added yourself."
-#~ msgstr "사용자가 더한것이 아닌 것은 지울 수 없습니다."
