--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-09-03  Danilo Šegan  <danilo@gnome.org>
+
+	* sr.po, sr@Latn.po: Updated.
+
 2005-09-02  Choe Hwanjin <choe.hwanjin@gmail.com>
 
 	* ko.po: Updated Korean translation by Young-Ho Cha.
