Updated German translation.
2005-09-04  Hendrik Richter  <hendi@gnome-de.org>

	* de.po: Updated German translation.

--- a/po/de.po
+++ b/po/de.po
@@ -35,8 +35,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-08-31 16:34+0200\n"
-"PO-Revision-Date: 2005-08-31 17:31+0200\n"
+"POT-Creation-Date: 2005-09-04 13:16+0200\n"
+"PO-Revision-Date: 2005-09-04 13:20+0200\n"
 "Last-Translator: Hendrik Richter <hendi@gnome-de.org>\n"
 "Language-Team: German <gnome-de@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -3187,13 +3187,13 @@ msgstr ""
 #: ../src/file-manager/fm-tree-view.c:900
 #, c-format
 msgid "\"%s\" will be moved if you select the Paste command"
-msgstr "»%s« wird verschoben, sobald Sie »Dateien einfügen« auswählen"
+msgstr "»%s« wird verschoben, sobald Sie »Einfügen« auswählen"
 
 #: ../src/file-manager/fm-directory-view.c:5503
 #: ../src/file-manager/fm-tree-view.c:904
 #, c-format
 msgid "\"%s\" will be copied if you select the Paste command"
-msgstr "»%s« wird kopiert, sobald Sie »Dateien einfügen« auswählen"
+msgstr "»%s« wird kopiert, sobald Sie »Einfügen« auswählen"
 
 #: ../src/file-manager/fm-directory-view.c:5510
 #, c-format
@@ -3201,10 +3201,10 @@ msgid "The %d selected item will be moved if you select the Paste command"
 msgid_plural ""
 "The %d selected items will be moved if you select the Paste command"
 msgstr[0] ""
-"Das gewählte Objekt wird verschoben, sobald Sie »Dateien einfügen« auswählen"
+"Das gewählte Objekt wird verschoben, sobald Sie »Einfügen« auswählen"
 "%.0d"
 msgstr[1] ""
-"Die %d gewählten Objekte werden verschoben, sobald Sie »Dateien einfügen« "
+"Die %d gewählten Objekte werden verschoben, sobald Sie »Einfügen« "
 "auswählen"
 
 #: ../src/file-manager/fm-directory-view.c:5517
@@ -3213,9 +3213,9 @@ msgid "The %d selected item will be copied if you select the Paste command"
 msgid_plural ""
 "The %d selected items will be copied if you select the Paste command"
 msgstr[0] ""
-"Das gewählte Objekt wird kopiert, sobald Sie »Dateien einfügen« auswählen%.0d"
+"Das gewählte Objekt wird kopiert, sobald Sie »Einfügen« auswählen%.0d"
 msgstr[1] ""
-"Die %d gewählten Objekte werden kopiert, sobald Sie »Dateien einfügen« "
+"Die %d gewählten Objekte werden kopiert, sobald Sie »Einfügen« "
 "auswählen"
 
 #: ../src/file-manager/fm-directory-view.c:5611
@@ -3363,21 +3363,21 @@ msgstr ""
 #: ../src/file-manager/fm-directory-view.c:6207
 msgid "Prepare the selected files to be moved with a Paste command"
 msgstr ""
-"Die gewählten Dateien auf Verschieben mit »Dateien einfügen« vorbereiten"
+"Die gewählten Dateien auf Verschieben mit »Einfügen« vorbereiten"
 
 #. name, stock id
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6211
 msgid "Prepare the selected files to be copied with a Paste command"
-msgstr "Die gewählten Dateien auf Kopieren mit »Dateien einfügen« vorbereiten"
+msgstr "Die gewählten Dateien auf Kopieren mit »Einfügen« vorbereiten"
 
 #. name, stock id
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6215
 msgid "Move or copy files previously selected by a Cut or Copy command"
 msgstr ""
-"Zuvor durch »Dateien ausschneiden« oder »Dateien kopieren« gewählte Dateien "
-"verschieben oder kopieren"
+"Zuvor durch »Ausschneiden« oder »Kopieren« gewählte Dateien verschieben oder "
+"kopieren"
 
 #. We make accelerator "" instead of null here to not inherit the stock
 #. accelerator for paste
@@ -3393,8 +3393,8 @@ msgid ""
 "Move or copy files previously selected by a Cut or Copy command into the "
 "selected folder"
 msgstr ""
-"Zuvor durch »Dateien ausschneiden« oder »Dateien kopieren« gewählte Dateien "
-"in den gewählten Ordner verschieben oder kopieren"
+"Zuvor durch »Ausschneiden« oder »Kopieren« gewählte Dateien in den gewählten "
+"Ordner verschieben oder kopieren"
 
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6225
@@ -3540,13 +3540,13 @@ msgstr "Diesen Ordner in einem einzelnen Navigationsfenster öffnen"
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6288
 msgid "Prepare this folder to be moved with a Paste command"
-msgstr "Diesen Ordner auf Verschieben mit »Dateien einfügen« vorbereiten"
+msgstr "Diesen Ordner auf Verschieben mit »Einfügen« vorbereiten"
 
 #. name, stock id
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6292
 msgid "Prepare this folder to be copied with a Paste command"
-msgstr "Diesen Ordner auf Kopieren mit »Dateien einfügen« vorbereiten"
+msgstr "Diesen Ordner auf Kopieren mit »Einfügen« vorbereiten"
 
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6297
