--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-09-04  Hendrik Richter  <hendi@gnome-de.org>
+
+	* de.po: Updated German translation.
+
 2005-09-03  Danilo Šegan  <danilo@gnome.org>
 
 	* sr.po, sr@Latn.po: Updated.
