--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+Major changes in 2.12.0 are:
+* Fix icon layout in text-beside-icons mode in some cases
+* Fix template creation on volumes other than the same as /tmp
+* Expand file uris correctly on desktop when passing to scripts
+* Workaround crash on audio preview in burn:
+* Fix handling of global show hidden files preference
+* Fix crash caused by earlier memleak fix
+* Don't redraw windows/desktop on focus in/out
+
 Major changes in 2.11.92 are:
 * Enable emblem dropping to the list view
 * Disallow deleting special locations from the location button popup
