--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-09-05  Alexander Larsson  <alexl@redhat.com>
+
+	* configure.in:
+	Require eel 2.12.
+
+	* NEWS:
+	Update for release
+
 2005-08-31  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-icon-container.c:
