Post release version bump.
2005-09-05  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Post release version bump.

=== nautilus 2.12.0 ===

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,13 @@
 2005-09-05  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
+	Post release version bump.
+
+=== nautilus 2.12.0 ===
+
+2005-09-05  Alexander Larsson  <alexl@redhat.com>
+
+	* configure.in:
 	Require eel 2.12.
 
 	* NEWS:
