--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-09-07  Inaki Larranaga  <dooteo@euskalgnu.org>
+
+	* eu.po: Updated Basque translation.
+
 === nautilus 2.12.0 ===
 
 2005-09-04  Hendrik Richter  <hendi@gnome-de.org>
