--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-09-10  Erdal Ronahi  <erdal.ronahi@gmail.com>
+
+        * confiure.in: Added "ku" (Kurdish) to ALL_LINGUAS
+
 2005-09-08  Federico Mena Quintero  <federico@ximian.com>
 
 	Fixes bug #171073:
