--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-09-10  Erdal Ronahi  <erdal.ronahi@gmail.com>
+
+        * ku.po: Added Kurdish translation
+
 2005-09-07  Inaki Larranaga  <dooteo@euskalgnu.org>
 
 	* eu.po: Updated Basque translation.
