--- a/po/vi.po
+++ b/po/vi.po
@@ -3866,7 +3866,7 @@ msgstr "Theo _loại"
 
 #: ../src/file-manager/fm-icon-view.c:1448
 msgid "By Modification _Date"
-msgstr "Theo ngày thay _đổi"
+msgstr "Theo ngày thay đổ_i"
 
 #: ../src/file-manager/fm-icon-view.c:1452
 msgid "By _Emblems"
