Updated Swedish translation.
2005-09-18  Christian Rose  <menthos@menthos.com>

	* sv.po: Updated Swedish translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,8 +1,13 @@
+2005-09-18  Christian Rose  <menthos@menthos.com>
+
+	* sv.po: Updated Swedish translation.
+
 2005-09-16  Clytie Siddall <clytie@riverland.net.au>
 
         * vi.po: Updated Vietnamese translation.
 
 2005-09-14  Runa Bhattacharjee <runa@bengalinux.org>
+
 	* bn.po: Updated Bengali (bn) Translation by
 	Progga <progga@bengalinux.org>
 
