--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-09-19  Christian Neumair  <chris@gnome-de.org>
+
+	* src/file-manager/fm-list-view.c: (drag_begin_callback),
+	(motion_notify_callback):
+	Setup drag in the "drag-begin" handler.
+
 2005-09-19  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-icon-container.[ch]:
