--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2005-09-19  Alexander Larsson  <alexl@redhat.com>
+
+	* icons/Makefile.am:
+	* icons/Search.png:
+	* icons/nautilus-desktop.png:
+	* icons/nautilus-file-management-properties.png:
+	* icons/nautilus-mini-logo.png:
+	* icons/nautilus-server-connect.png:
+	* icons/side_bar_image.png:
+	Remove unused icons (#315990)
+	Patch from Jaap A. Haitsma
+	
 2005-09-19  Christian Neumair  <chris@gnome-de.org>
 
 	* libnautilus-private/nautilus-metafile.c: (copy_file_metadata):
