Autofill "Connect to server" dialog where possible. Fixes #314745
	* nautilus-connect-server-dialog-main.c: (main):
	* nautilus-connect-server-dialog.h:
	* nautilus-connect-server-dialog.c:
	(nautilus_connect_server_dialog_new):
	* nautilus-window-menus.c:
	(action_connect_to_server_callback):
	Autofill "Connect to server" dialog where possible.
	Fixes #314745

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2005-09-19  Nate Nielsen <nielsen@memberwebs.com>
+
+	* nautilus-connect-server-dialog-main.c: (main):
+	* nautilus-connect-server-dialog.h:
+	* nautilus-connect-server-dialog.c:
+	(nautilus_connect_server_dialog_new):
+	* nautilus-window-menus.c:
+	(action_connect_to_server_callback): 
+	Autofill "Connect to server" dialog where possible.
+	Fixes #314745
+
 2005-09-19  Christian Neumair  <chris@gnome-de.org>
 
 	* libnautilus-private/nautilus-file-operations.c:
