--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-09-24  Erdal Ronahi  <erdal.ronahi@gmail.com>
+
+	* ku.po: Updated Kurdish translation.
+
 2005-09-18  Christian Rose  <menthos@menthos.com>
 
 	* sv.po: Updated Swedish translation.
