--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2005-09-25  Alessio Frusciante  <algol@firenze.linux.it>
+
+	* it.po: Updated Italian translation by
+	Luca Ferretti <elle.uca@infinito.it>.
+
 2005-09-24  Erdal Ronahi  <erdal.ronahi@gmail.com>
 
 	* ku.po: Updated Kurdish translation.
