--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-09-27  Alexander Larsson  <alexl@redhat.com>
+
+	* src/file-manager/fm-directory-view.c:
+	(activate_check_mime_types):
+	Never warn if the files would be launched in the same app.
+	Partially reverts checkin from 2005-08-01.
+
 2005-09-26  Christian Neumair  <chris@gnome-de.org>
 
 	* libnautilus-private/nautilus-desktop-directory.c:
