Correct sort order for dummy row. Possible fix for #123051
2005-09-30  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-tree-view.c: (compare_rows):
	Correct sort order for dummy row.
	Possible fix for #123051

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-09-30  Alexander Larsson  <alexl@redhat.com>
+
+	* src/file-manager/fm-tree-view.c: (compare_rows):
+	Correct sort order for dummy row.
+	Possible fix for #123051
+
 2005-09-27  Alexander Larsson  <alexl@redhat.com>
 
 	* src/file-manager/fm-directory-view.c:
