Fix some spelling errors. Patch from Lukasz Stelmach <stlman@poczta.fm>
2005-10-03  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/nautilus-directory-view-ui.xml:
	Fix some spelling errors.
	Patch from Lukasz Stelmach <stlman@poczta.fm>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-10-03  Alexander Larsson  <alexl@redhat.com>
+
+	* src/file-manager/nautilus-directory-view-ui.xml:
+	Fix some spelling errors.
+	Patch from Lukasz Stelmach <stlman@poczta.fm>
+
 2005-09-30  Christian Neumair  <chris@gnome-de.org>
 
 	* libnautilus-private/nautilus-icon-container.c:
