--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2005-10-03  Alexander Larsson  <alexl@redhat.com>
 
+	* src/nautilus-window.c:
+	Verify arguments in public functions.
+	Patch from Christian Neumair.
+
+2005-10-03  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-icon-container.c:
 	* libnautilus-private/nautilus-icon-private.h:
 	Don't crash if file removed during start of drag. (#158196)
